Fix vertical overflow with short vh

--- a/src/style.css
+++ b/src/style.css
@@ -4,13 +4,22 @@
   font-family: 'Roboto', sans-serif;
 }
 
+html {
+  margin: 0;
+  height: 100%;
+  width: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
   color: rgb(244, 235, 235);
   background-color: rgb(29, 29, 29);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  /* min-height: 100%; */
+  display: flex;
+  flex-direction: column;
 }
 
 h2, h3 {
@@ -34,8 +43,9 @@ a:visited {
 /* Shared Header & Logo Styling */
 
 header {
+  flex: none;
   box-sizing: border-box;
-  height: 10%;
+  height: 120px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -75,7 +85,7 @@ nav li {
 /* Shared Main Content */
 
 #content {
-  height: 87%;
+  flex-grow: 1;
 }
 
 .main {
@@ -204,12 +214,13 @@ nav li {
 /* Footer */
 
 footer {
+  flex: none;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 40px;
   background-color: inherit;
-  height: 3%;
+  height: 40px;
 }
 
 /* Copyright with github */
